Editor has fixed height - overflow set to auto to allow scrolling.

--- a/src/styles/Draft.css
+++ b/src/styles/Draft.css
@@ -11,7 +11,7 @@
 .DraftEditor-editorContainer,
 .DraftEditor-root,
 .public-DraftEditor-content {
-    height: 100%;
+    height: inherit;
     width: 100%;
     text-align: initial;
 }
