--- a/src/styles/components/MessageEditor.less
+++ b/src/styles/components/MessageEditor.less
@@ -10,6 +10,7 @@
 
 .MessageEditor {
   height: @message-editor-height;
+  max-height: @message-editor-height;
   position: relative;
   background-color: white;
   border-top: 1px solid @border-color-light;
@@ -45,6 +46,7 @@
   align-items: flex-end;
   height: @MessageEditor__textAreaWrapper-height;
   margin-top: 10px;
+  overflow: auto;
 }
 
 .MessageEditor__textArea {
@@ -56,7 +58,7 @@
 
 .MessageEditor__sendButton {
   position: absolute;
-  right: 15px;
-  bottom: 13px;
+  right: 25px;
+  bottom: 15px;
   z-index: 10;
 }
