--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,3 +1,3 @@
 @header-height: 60px;
 @channel-header-height: 50px;
-@message-editor-height: 250px;
+@message-editor-height: 150px;
